--- a/references/biblio.bib
+++ b/references/biblio.bib
@@ -249,6 +249,47 @@ langid = {english}
   langid = {english}
 }
 
+@article{RussiaGlobexBank2017,
+  title = {Russia's {{Globex}} Bank Says Hackers Targeted Its {{SWIFT}} Computers},
+  date = {2017-12-21},
+  journaltitle = {Reuters},
+  url = {https://www.reuters.com/article/us-russia-cyber-globex-idUSKBN1EF294},
+  entrysubtype = {newspaper},
+  langid = {english}
+}
+
+@article{HowHackersPulled,
+  title = {How {{Hackers Pulled Off}} a \$20 {{Million Mexican Bank Heist}}},
+  journaltitle = {Wired},
+  issn = {1059-1028},
+  url = {https://www.wired.com/story/mexico-bank-hack/},
+  abstract = {Welcome to the world of fake accounts, phantom funds, and money mules.},
+  entrysubtype = {magazine},
+  langid = {english}
+}
+
+@online{TwoBytes951m,
+  title = {Two Bytes to \$951m},
+  url = {https://baesystemsai.blogspot.com/2016/04/two-bytes-to-951m.html},
+  langid = {british}
+}
+
+@jurisdiction{UnitedStatesAmerica,
+  title = {United {{States}} of {{America}} vs {{PARK JIN HYOK}}}
+}
+
+@misc{SWIFTThreatAnalysis,
+  title = {{{SWIFT Threat}} Analysis},
+  publisher = {{F-Secure}}
+}
+
+
+
+
+
+
+
+
 
 
 
